--- a/index.html
+++ b/index.html
@@ -104,38 +104,11 @@
     </div>
   </div>
   </div>
-  <div class="bimb">
-    <h1 class="tits">Pizza</h1>
-    <div class="items-container">
-    <div class="card-5 card space">
-      <img class="product-image" src="pizza.jpeg" alt="">
-      <button class="add-to-cart">Adauga in Cos</button>
-      <h2><span class="tag tag-purple shop-item-title">Pizza vegetariană fară Gluten</span></h2>
-      <span class="product-price">68.50 lei</span>
-              <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
-      </h4>
-    </div>
-  </div>  
-</div>
-
-    <div class="items-container">
-    <div class="card-6 card space">
-      <img class="product-image" src="pizza.png" alt="">
-        <button class="add-to-cart">Adauga in Cos</button>
-          <h2><span class="tag tag-purple shop-item-title">Pizza cu piept de pui fară Gluten</span></h2>
-          <span class="product-price">56 lei</span>
-                  <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
-      </h4>
-    </div>
     <h1 class="tits">Strudel</h1>
        <div class="bimb">
       <div class="items-container">
     <div class="card-7 card space">
-      <img class="product-image" src="strudel.jpeg" alt="">
+      <img class="product-image" src="strudel.jpg" alt="">
         <button class="add-to-cart">Adauga in Cos</button>
           <h2><span class="tag tag-purple shop-item-title">Ştrudel cu afine fara Gluten</span></h2>
           <span class="product-price">8.50 lei</span>
