--- a/site.html
+++ b/site.html
@@ -13,13 +13,13 @@
  			<a href="site.html"><img class="logo" src="Glutelino.png"/></a>
  			<ul>
  			<button>
- 				<li class="button_top"><a href="noi.html">Echipa noastra</a></li>
+ 				<li class="button_top extra"><a href="noi.html">Echipa noastra</a></li>
  			</button>
  			<button>
- 				<li class="button_top"><a href="index.html">Produse</a></li>
+ 				<li class="button_top extra"><a href="index.html">Produse</a></li>
  			</button>
  			<button>
- 				<li class="button_top"><a href="cos.html">Contact</a></li>
+ 				<li class="button_top extra"><a href="cos.html">Contact</a></li>
  			</button>
  			</ul>
  		</nav>
@@ -30,7 +30,7 @@
 		<h1>Torturi, Prajituri și Pizza</h1>
 		<p>Fara Gluten</p>
  		<button class="comanda">
- 			<li class="button_top"><a href="produse.html">Comanda</a></li>
+ 			<li class="button_top"><a href="index.html">Comanda</a></li>
  		</button>
  	  </div>
  	  <footer class="cream">
