--- a/noi.html
+++ b/noi.html
@@ -31,7 +31,7 @@
 <div class="container">
   <div class="card">
     <div class="card-header">
-      <img src="martiniuc.png" alt="rover" />
+      <img src="martiniuc.jpg" alt="rover" />
     </div>
     <div class="card-body">
       <span class="tag tag-purple">Martiniuc Maria</span>
