--- a/cos.html
+++ b/cos.html
@@ -26,7 +26,7 @@
  	</header>
    <div class="cos">
       Contact:
-   <div>Telefon:075-xxx-xxxx</div>
+   <div>Telefon:075-942-4247</div>
    <div>Email: Glutelino@gmail.com</div>
    <div>Adresa: Botosani,str Bucovina nr 33</div>
    <div class="adresa">
