--- a/site.html
+++ b/site.html
@@ -10,7 +10,7 @@
  <body class="body">
  	<header>
  		<nav class="navbar">
- 			<a href="site.html"><img class="logo" src="Glutelino.png"/></a>
+ 			<a href="site.html"><img class="logo" src="glutelino.png"/></a>
  			<ul>
  			<button>
  				<li class="button_top extra"><a href="noi.html">Echipa noastra</a></li>
