--- a/cos.html
+++ b/cos.html
@@ -10,7 +10,7 @@
  <body class="shop">
  	<header>
  		<nav class="navbar">
- 			<a href="site.html"><img class="logo" src="Glutelino.png"/></a>
+ 			<a href="site.html"><img class="logo" src="glutelino.png"/></a>
  			<ul>
  			<button>
  				<li class="button_top"><a href="noi.html">Echipa noastra</a></li>
