--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <span class="frek">
  <header>
     <nav class="navbar">
-      <a href="site.html"><img class="logo" src="Glutelino.png"/></a>
+      <a href="site.html"><img class="logo" src="glutelino.png"/></a>
       <ul>
       <button>
         <li class="button_top"><a href="noi.html">Echipa noastra</a></li>
