--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <h2><span class="tag tag-purple shop-item-title">Tort fară gluten cu fructe si crema de vanilie</span></h2>
           <span class="product-price">106 lei</span>
         <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
+       O combinatie clasică si blandă de vanilie ce se imbină cu exoticul gust de fructe de padure
+       Ingrediente:Blat , Cremă de vanilie , Sos de fructe de padure , Fructe de decor
       </h4>
     </div>
   </div>
@@ -74,8 +74,8 @@
         <h2><span class="tag tag-purple shop-item-title">Tort fară gluten cu ciocolată si zmeură</span></h2>
         <span class="product-price">155 lei</span>
                 <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
+       Cele mai iubite arome de ciocolată fuzioneaza cu impecabilul gust de zmeura si iti ofera o capoderă culinară
+       Ingrediente: Blat, Mousse de ciocolată neagră/albă , Jeleu de Zmeură , Glzaură de ciocolată cu lapte/alba/neagră , Ciocolată Amaruie
       </h4>
     </div>
   </div>
@@ -87,8 +87,8 @@
           <h2><span class="tag tag-purple shop-item-title">Brioșe cu afine fară gluten</span></h2>
           <span class="product-price">6.50 lei</span>
                   <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
+        Aceste Brioșe cu mici afine  cu suc violaceu și gust plăcut dulce acrișor te vor face sa te indragostești de ele la prima îmbucătură
+        Ingrediente: Zahăr, Lapte de migdale , Afine , Coaja de lămaie
       </h4>
     </div>
      <div class="items-container">
@@ -98,8 +98,8 @@
           <h2><span class="tag tag-purple shop-item-title">Brioșe cu  ciocolată fara gluten</span></h2>
         <span class="product-price">6.50 lei</span>
                 <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
+        Un gust puternic de Ciocolată care satisface nevoile zaharoase la toti gustatorii
+        Ingrediente:Banane , Ouă ,Fulgi ciocolată, Sirop de agave
       </h4>
     </div>
   </div>
@@ -112,9 +112,9 @@
         <button class="add-to-cart">Adauga in Cos</button>
           <h2><span class="tag tag-purple shop-item-title">Ştrudel cu afine fara Gluten</span></h2>
           <span class="product-price">8.50 lei</span>
-                  <h4>
-       Strudel de mere facut din cel mai mare drag al sufletului nostru,mai bun ca la mama acasa
-       Ingrediente:mere,unt,zahar,oua,drojdie,lamaie,rom
+      <h4>
+      Strudel cu afine ce aduce zambetul oricarei persoane,indiferent de zi si stare
+      Ingrediente:oua,unt,afine,miere,ricotta
       </h4>
     </div>
       <div class="items-container">
