--- a/noi.html
+++ b/noi.html
@@ -72,7 +72,7 @@
       <img src="unknown.jpg" alt="city" />
     </div>
     <div class="card-body">
-      <span class="tag tag-pink">Prisacariu George</span>
+      <span class="tag tag-pink">Pascariu George</span>
     </div>
   </div>
 </div>
