--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="card-7 card space">
       <img class="product-image" src="strudel.jpg" alt="">
         <button class="add-to-cart">Adauga in Cos</button>
-          <h2><span class="tag tag-purple shop-item-title">Ştrudel cu afine fara Gluten</span></h2>
+          <h2><span class="tag tag-purple shop-item-title">Ştrudel cu visine fara Gluten</span></h2>
           <span class="product-price">10 lei</span>
       <h4>
       Strudel cu afine ce aduce zambetul oricarei persoane,indiferent de zi si stare
